[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-control"
version = "1.0.0"
description = "Orchestration and approval layer for nexus-router executions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "mcp-tool-shop", email = "64996768+mcp-tool-shop@users.noreply.github.com" }
]
keywords = ["mcp", "orchestration", "approval", "audit", "nexus"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "nexus-router>=0.1.0",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pyright>=1.1.350",
    "ruff>=0.3",
    "pip-audit>=2.7.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/mcp-tool-shop-org/nexus-control"
Repository = "https://github.com/mcp-tool-shop-org/nexus-control"
Issues = "https://github.com/mcp-tool-shop-org/nexus-control/issues"

[tool.hatch.build.targets.wheel]
packages = ["nexus_control"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["nexus_control", "tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]
